base/monitoring/prometheus/postgres-exporter-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  labels:
    app: postgres-exporter
spec:
  ports:
    - name: metrics
      port: 9187
      targetPort: 9187
  selector:
    app: postgres-exporter
